@startuml
title SCM Provider SPI — Class Diagram

interface ScmProvider {
  + providerType() : String
  + listRepositories(config) : List<ScmRepository>
  + getFileContents(config, repoPath, filePath) : Optional<String>
  + resolveOwnership(config, repo) : OwnershipMap
}

record ScmConnectionConfig {
  + connectionId : UUID
  + tenantId : UUID
  + providerType : String
  + config : Map<String, Object>
}

record ScmRepository {
  + id : String
  + name : String
  + fullPath : String
  + defaultBranch : String
  + archived : boolean
}

record OwnershipMap {
  + ownerTeams : List<String>
  + pathOwners : Map<String, List<String>>
}

class ScmProviderException {
  - providerType : String
  + providerType() : String
}

class GitHubProvider implements ScmProvider {
  - client : GitHubRestClient
}

class AzureDevOpsProvider implements ScmProvider {
  - client : AzureDevOpsRestClient
}

class GitHubRestClient {
  + listRepositories(org) : List<Map>
  + getFileContents(owner, repo, path) : Optional<String>
  + getCodeOwners(owner, repo) : List<Map>
}

class AzureDevOpsRestClient {
  + listProjects() : List<String>
  + listRepositories(project) : List<Map>
  + getFileContents(project, repoId, path) : Optional<String>
}

class AzureDevOpsAuthHelper {
  + buildAuthorizationHeader(config) : String
}

ScmProvider ..> ScmConnectionConfig : uses
ScmProvider ..> ScmRepository : returns
ScmProvider ..> OwnershipMap : returns
GitHubProvider --> GitHubRestClient : creates
AzureDevOpsProvider --> AzureDevOpsRestClient : creates
AzureDevOpsRestClient --> AzureDevOpsAuthHelper : uses

@enduml
